<resources>
    <string name="app_name">lab3_next</string>
    <string name="activity_color_field_default">#88bbff</string>
    <string name="activity_color_apply_label">set color</string>
    <string name="activity_figure_circle_label">круг</string>
    <string name="activity_figure_square_label">квадрат</string>
    <string name="activity_figure_triangle_label">треугольнимк</string>
    <string name="activity_main_position_top_left_label">-</string>
    <string name="activity_main_position_top_center_label">-</string>
    <string name="activity_main_position_top_right_label">-</string>
    <string name="activity_main_position_center_left_label">-</string>
    <string name="activity_main_position_center_right_label">-</string>
    <string name="activity_main_position_center_center_label">-</string>
    <string name="activity_main_position_bottom_left_label">-</string>
    <string name="activity_main_position_bottom_center_label">-</string>
    <string name="activity_main_position_bottom_right_label">-</string>
    <string name="activity_main_position_label">выберите позицию</string>
    <string name="activity_main_button_color_label">задать цвет</string>
    <string name="activity_main_button_figure_label">выбрать фигуру</string>
    <string name="activity_main_button_position_label">задать позицию</string>
</resources>
