<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PositionActivity">

    <TextView
        android:id="@+id/activity_main_position_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/activity_main_position_label"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/activity_main_position_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_position_label">

        <Button
            android:id="@+id/activity_main_position_top_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_top_left_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_top_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_top_center_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_top_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_top_right_label"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_position_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_position_top">

        <Button
            android:id="@+id/activity_main_position_center_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_center_left_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_center_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_center_center_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_center_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_center_right_label"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_main_position_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_position_center">


        <Button
            android:id="@+id/activity_main_position_bottom_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_bottom_left_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_bottom_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_bottom_center_label"
            android:textAlignment="center" />

        <Button
            android:id="@+id/activity_main_position_bottom_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPositionPick"
            android:text="@string/activity_main_position_bottom_right_label"
            android:textAlignment="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>